[gd_scene load_steps=4 format=3 uid="uid://hqmfutld6i1m"]

[ext_resource type="Script" path="res://scripts/meteor.gd" id="1_bnjmb"]
[ext_resource type="Texture2D" uid="uid://c3035wgtlcw3n" path="res://assets/art/meteor.png" id="2_umuy8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kb4v8"]
radius = 6.0

[node name="Meteor" type="RigidBody2D" groups=["meteor"]]
collision_layer = 12
collision_mask = 12
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("1_bnjmb")
metadata/_edit_group_ = true

[node name="Sprite2d" type="Sprite2D" parent="."]
texture = ExtResource("2_umuy8")
hframes = 6
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kb4v8")

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ParticleTimer" to="." method="_on_particle_timer_timeout"]
